@@ -31,14 +31,139 @@
 #include <sapi/embed/php_embed.h>
 #include <zend_stream.h>
 
-#ifdef ZTS
-void ***tsrm_ls;
-#endif
-
 zval *php_Array_from_maps(maps* t);
 zval*  php_Array_from_map(map*);
 maps* php_maps_from_Array(HashTable* t);
 map* php_map_from_HasTable(HashTable* t);
+
+#ifdef ZTS
+void ***tsrm_ls;
+#endif
+
+ZEND_BEGIN_MODULE_GLOBALS(zoo)
+long _SERVICE_SUCCEEDED;
+long _SERVICE_FAILED;
+ZEND_END_MODULE_GLOBALS(zoo)
+
+#ifdef ZTS
+#define ZOO_G(v) TSRMG(zoo_globals_id, zend_zoo_globals *, v)
+#else
+#define ZOO_G(v) (zoo_globals.v)
+#endif
+
+#define PHP_ZOO_VERSION "1.0"
+#define PHP_ZOO_EXTNAME "ZOO"
+
+PHP_MINIT_FUNCTION(zoo);
+PHP_MSHUTDOWN_FUNCTION(zoo);
+PHP_RINIT_FUNCTION(zoo);
+
+PHP_FUNCTION(zoo_Translate);
+PHP_FUNCTION(zoo_UpdateStatus);
+PHP_FUNCTION(zoo_SERVICE_SUCCEEDED);
+PHP_FUNCTION(zoo_SERVICE_FAILED);
+
+extern zend_module_entry zoo_module_entry;
+#define phpext_zoo_ptr &zoo_entry
+
+ZEND_DECLARE_MODULE_GLOBALS(zoo)
+
+static zend_function_entry zoo_functions[] = {
+  PHP_FE(zoo_Translate, NULL)
+  PHP_FE(zoo_UpdateStatus, NULL)
+  PHP_FE(zoo_SERVICE_SUCCEEDED, NULL)
+  PHP_FE(zoo_SERVICE_FAILED, NULL)
+  {NULL, NULL, NULL}
+};
+
+zend_module_entry zoo_module_entry = {
+#if ZEND_MODULE_API_NO >= 20010901
+    STANDARD_MODULE_HEADER,
+#endif
+    PHP_ZOO_EXTNAME,
+    zoo_functions,
+    PHP_MINIT(zoo),
+    PHP_MSHUTDOWN(zoo),
+    PHP_RINIT(zoo),
+    NULL,
+    NULL,
+#if ZEND_MODULE_API_NO >= 20010901
+    PHP_ZOO_VERSION,
+#endif
+    STANDARD_MODULE_PROPERTIES
+};
+
+ZEND_GET_MODULE(zoo)
+
+PHP_INI_BEGIN()
+PHP_INI_END()
+
+static void
+php_zoo_init_globals(zend_zoo_globals *zoo_globals)
+{
+  zoo_globals->_SERVICE_SUCCEEDED=3;
+  zoo_globals->_SERVICE_FAILED=4;
+}
+
+PHP_RINIT_FUNCTION(zoo)
+{
+  return SUCCESS;
+}
+
+PHP_MINIT_FUNCTION(zoo)
+{
+  ZEND_INIT_MODULE_GLOBALS(zoo, php_zoo_init_globals,NULL);
+  REGISTER_INI_ENTRIES();
+  return SUCCESS;
+}
+
+PHP_MSHUTDOWN_FUNCTION(zoo)
+{
+  UNREGISTER_INI_ENTRIES();
+  return SUCCESS;
+}
+
+PHP_FUNCTION(zoo_Translate)
+{
+  char *value;
+  int value_len;
+  if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "s", &value, &value_len) == FAILURE) {
+    RETURN_NULL();
+  }
+  RETURN_STRING(_ss(value), 1);
+}
+
+PHP_FUNCTION(zoo_UpdateStatus)
+{
+  zval *arr;
+  char *message;
+  int message_len;
+  long pourcent;
+  char *status=(char*)malloc(4*sizeof(char));
+  if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "asl", &arr, &message, &message_len,&pourcent) == FAILURE) {
+    RETURN_NULL();
+  }
+  HashTable* t=HASH_OF(arr);
+  maps* conf=php_maps_from_Array(t);
+  setMapInMaps(conf,"lenv","message",message);
+  sprintf(status,"%d",pourcent);
+  setMapInMaps(conf,"lenv","status",status);
+  _updateStatus(conf);
+  freeMaps(&conf);
+  free(conf);
+  free(status);
+  RETURN_NULL();
+}
+
+PHP_FUNCTION(zoo_SERVICE_SUCCEEDED)
+{
+  RETURN_LONG(ZOO_G(_SERVICE_SUCCEEDED));
+}
+
+PHP_FUNCTION(zoo_SERVICE_FAILED)
+{
+  RETURN_LONG(ZOO_G(_SERVICE_FAILED));
+}
 
 /**
  * Load a PHP script then run the function corresponding to the service by
@@ -61,26 +186,35 @@ int zoo_php_support(maps** main_conf,map* request,service* s,maps **real_inputs,
   int res=SERVICE_FAILED;
 
   tmp=getMap(s->content,"serviceProvider");
-  zend_file_handle iscript;
-  iscript.type=ZEND_HANDLE_FP;
-  iscript.filename=tmp->value;
-  iscript.opened_path=NULL;
-  //iscript.free_filname=0;
-  if(!(iscript.handle.fp=fopen(iscript.filename,"rb"))){
-    char tmp1[1024];
-    sprintf(tmp1,"Unable to load PHP file %s",tmp->value);
-    map* err=createMap("text",tmp1);
-    addToMap(err,"code","NoApplicableCode");
-    printExceptionReportResponse(m,err);
-    exit(-1);
+  map* cwd=getMapFromMaps(m,"lenv","cwd");
+  map* mp=getMap(request,"metapath");
+  char *scriptName;
+  if(mp!=NULL && strlen(mp->value)>0){
+    scriptName=(char*)malloc((strlen(cwd->value)+strlen(mp->value)+strlen(tmp->value)+3)*sizeof(char));
+    sprintf(scriptName,"%s/%s/%s",cwd->value,mp->value,tmp->value);
+  }else{
+    scriptName=(char*)malloc((strlen(cwd->value)+strlen(tmp->value)+2)*sizeof(char));
+    sprintf(scriptName,"%s/%s",cwd->value,tmp->value);
   }
+  zend_file_handle iscript;
+  iscript.type=ZEND_HANDLE_FD;
+  iscript.opened_path=NULL;
+  iscript.filename=tmp->value;
+  iscript.free_filename=0;
+  FILE* temp=fopen(scriptName,"rb");
+  if(temp==NULL){
+    char tmp1[1024];
+    sprintf(tmp1,_("Unable to load the PHP file %s"),tmp->value);
+    free(scriptName);
+    return errorException(m,tmp1,"NoApplicableCode",NULL);
+  }
+  iscript.handle.fd=fileno(temp);
 
-  php_embed_init(0,NULL,&tsrm_ls);
+  php_embed_init(0,NULL PTSRMLS_CC);
    
   zend_try {
-
+    zend_startup_module(&zoo_module_entry);
     php_execute_script(&iscript TSRMLS_CC);
-
     zval *iargs[3];
     zval iret, ifunc,ifile;
       
@@ -88,23 +222,27 @@ int zoo_php_support(maps** main_conf,map* request,service* s,maps **real_inputs,
     iargs[0] = php_Array_from_maps(*main_conf);
     iargs[1] = php_Array_from_maps(*real_inputs);
     iargs[2] = php_Array_from_maps(*real_outputs);
-    
-    call_user_function(EG(function_table), NULL, &ifunc, &iret, 3, iargs TSRMLS_CC);
+      
+    if((res=call_user_function(EG(function_table), NULL, &ifunc, &iret, 3, iargs TSRMLS_CC))==SUCCESS){
+      
+      HashTable* t=HASH_OF(iargs[2]);
+      HashTable* t1=HASH_OF(iargs[0]);
+      *real_outputs=php_maps_from_Array(t);
+      *main_conf=php_maps_from_Array(t1);
 
-    HashTable* t=HASH_OF(iargs[2]);
-    *real_outputs=php_maps_from_Array(t);
-    
-    char tmp1[1024];
-
-    res=SERVICE_SUCCEEDED;
-
+      res=Z_LVAL(iret);
+    }else{
+      free(scriptName);
+      fclose(temp);
+      return errorException(m,"Unable to process.","NoApplicableCode",NULL);;
+    }
   } zend_catch { 
-    map* err=createMap("text","Unable to process.");
-    addToMap(err,"code","NoApplicableCode");
-    printExceptionReportResponse(m,err);
-    exit(-1);
+    free(scriptName);
+    fclose(temp);
+    return errorException(m,"Unable to process.","NoApplicableCode",NULL);;
   } zend_end_try();
-
+  free(scriptName);
+  fclose(temp);
   php_embed_shutdown(TSRMLS_C);
 
   return res;
@@ -215,8 +353,11 @@ maps* php_maps_from_Array(HashTable *t){
     cursor->next=NULL;
     if(final_res==NULL)
       final_res=cursor;
-    else
+    else{
       addMapsToMaps(&final_res,cursor);
+      freeMaps(&cursor);
+      free(cursor);
+    }
 #ifdef DEBUG
     fprintf(stderr,"key : %s\n",key);
 #endif
@@ -288,17 +429,3 @@ map* php_map_from_HasTable(HashTable* t){
   }
   return final_res;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
